minor changes that wont push for some reason

--- a/llama.ipynb
+++ b/llama.ipynb
@@ -49,50 +49,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "HF_TOKEN: Optional[str] = os.getenv(\"HUGGING_FACE_TOKEN\")\n",
     "gpt4 = OpenAI(model=\"gpt-4\")\n",
-    "query = \"How is social media polarizing\""
+    "query = \"how does sleep help athletes\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** f507b96b-e94a-40ac-a870-b8c8efdcd399<br>**Similarity:** 0.8126638091070074<br>**Text:** International Journal of Computer Sciences and Engineering                                    Vol.5(10), Oct 2017 , E-ISSN: 2347 -2693  \n",
-       "  © 201 7, IJCSE All Rights Reserved                                                                                                                                      352 Advertising – We can  promote our business to the largest \n",
-       "audience . The whole world is open for you, and can \n",
-       "promote to them. It will help in increase the profits and \n",
-       "achieves the targets of Business.  \n",
-       " \n",
-       "Noble Cause – Social media can also be used for the noble \n",
-       "causes.The public is making use of social media for \n",
-       "contribut ion for needy people and it can be a quick way to \n",
-       "help such people.  \n",
-       " \n",
-       "Helps in Building Communities – Since our world has \n",
-       "different religions and beliefs, so people of different \n",
-       "communities can connect to discuss and share related stuffs.  \n",
-       " Conventional mark eting mediums such as the radio, TV \n",
-       "commercials and print ads are completely obsolete now \n",
-       "and demand for thousands of dollars. With the use of \n",
-       "social media the businesses can connect with their \n",
-       "targeted customers for free, the only cost is energy and \n",
-       "time.   \n",
-       " The increasing popularity of social sites like Twitter, \n",
-       "Facebook and LinkedIn, social networks has gained \n",
-       "attention as the most viable communication choice for \n",
-       "the bloggers, article writers and content creators.  \n",
-       " These long range informal communication destinations \n",
-       "have opened the open door for every one of the \n",
-       "b...<br>"
+       "**Node ID:** 2f39fe92-e0be-4c43-95bb-02d03b7eb7ef<br>**Similarity:** 0.8725831105623597<br>**Text:** sleep and improve performance. Importantly, athletes have\n",
+       "been found to demonstrate poor self-assessment in terms ofsleep need, duration, and quality, potentially making themless likely to seek guidance or medical help when needed (50).\n",
+       "In addition, certain cultures appear to idealize the ability to\n",
+       "function with minimal sleep, potentially further inhibitingathletes from obtaining adequate sleep or seeking help.\n",
+       "Training volume and schedules exert important, potentially\n",
+       "negative effects on sleep. In a study of 27 adult athletesassigned to control (normal training), acute fatigue, and\n",
+       "functional overreaching groups, those nine athletes in the\n",
+       "functional overreaching group exhibited significant re-ductions in sleep time (17). Increases in acute training load\n",
+       "also have been shown to be associated with decreased sleep\n",
+       "duration and quality in female youth soccer players (54) andAustralian rules football players (31). Sleep duration also hasbeen found to be significantly affected by training schedule, with\n",
+       "decreased sleep and increased pretraining fatigue before days\n",
+       "with early morning training, (37) as well as nighttime compe-tition (38). On the other hand, despite worse sleep quality, no\n",
+       "change in sleep duration was identified with increased train-\n",
+       "ing load among elite adult male athletes during a residentialcamp (31). Given the important implications for health and\n",
+       "performance, further efforts to define the relationship be-\n",
+       "tween training and sleep constitute an important are...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -104,23 +93,115 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 6c604b4e-abe8-4b5f-8ade-be3f0efbda25<br>**Similarity:** 0.8121739864839521<br>**Text:** © 201 7, IJCSE All Rights Reserved                                                                                                                                      347 International Journal of Computer Sciences and Engineering     Open Access  \n",
-       "Review  Paper                                              Volume -5, Issue -10                                          E-ISSN : 2347 -2693  \n",
-       "                 \n",
-       "A Study on Positive and Negative Effects of Social Media on Society  \n",
-       "W.Akram1*, R.Kumar2 \n",
-       "1* Department of Computer Applications, GDC Mendhar, Poonch , India  \n",
-       "2 Department of Computer Applications, GDC Mendhar, Poonch, India  \n",
-       "  \n",
-       "*Corresponding Author: wasimmir143@gmail.com  Mobile : +91 -7051388383  \n",
-       "Available online at: www.ijcseonline.org  \n",
-       "Received: 15/Sep/2017, Revised: 28/Sep/2017, Accepted: 19/Oct/2017, Published: 30/Oct/2017  \n",
-       "Abstract - Social media is a platform for public around the World to discuss their issues and opinions. Before knowing the \n",
-       "actual aspects of social media people must have to know what does social media mean? Social media is a term used to \n",
-       "describe the interaction bet ween groups or individuals in which they produce, share, and sometimes exchange ideas, images, \n",
-       "videos and many more over the internet and in virtual communities.  Children are growing up surrounded by mobile devices \n",
-       "and interactive social networking sites s uch as Twitter, MySpace, and Facebook, Orkut which has made the social media a \n",
-       "vital aspect of their life. Social n...<br>"
+       "**Node ID:** 47ccf2b5-afc1-46aa-a8cd-71c305ddfbbc<br>**Similarity:** 0.8704606131269372<br>**Text:** competition, particularly in athl etic events with large elements\n",
+       "of quick decision-making.\n",
+       "Sleep, Injury, and Illness\n",
+       "Recent evidence suggests that training availability is a\n",
+       "primary determinant of athletic success, and injuries andillnesses represent the greatest obstacle to training partici-\n",
+       "pation in athletes. Although prior research has focused al-\n",
+       "most exclusively on youth athletes, the available evidencesuggests that impaired or decreased sleep is associated with\n",
+       "an increased risk of injury. In a study of middle and high\n",
+       "school athletes, Milewski et al. (25) found that those in-dividuals who slept less than 8 h per night on average were\n",
+       "70% more likely to report an injury than those who slept\n",
+       "more than 8 h. In addition, a recent study of 496 adolescentathletes from 16 different individual and team sports foundthat increased training load and decreased self-reported\n",
+       "sleep duration were independently associated with an in-\n",
+       "creased risk of injury. In fact, the greatest risk for injuryresulted when training load increased and sleep duration\n",
+       "decreased simultaneously, as is often seen in competitive\n",
+       "travel and training camps (52). The underlying mechanismfor the relationship between sleep loss and injury is unclear,\n",
+       "but may be related to resulting impairments in reaction time\n",
+       "and cognitive function after sleep deprivation that couldpredispose to acute injury (52). On the other hand, impaired\n",
+       "sleep may contribute to higher levels of fatigue that can\n",
+       "similarly contribute to...<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 7f7e4558-0b51-4ae8-b518-8727bcafe5f6<br>**Similarity:** 0.866238700618445<br>**Text:** While academic pres-\n",
+       "sures are not unique to athletes, they must be managed\n",
+       "alongside the additional time constraints of the simultaneoustraining and competition schedules. Unfortunately, this often\n",
+       "means that athletes are required to sacrifice sleep time to fully\n",
+       "accommodate academic and athletic commitments, such thatyounger athletes may be at an even greater risk of sleep dep-\n",
+       "rivation (47). This can not only undermine athletic perfor-\n",
+       "mance but also threaten classroom performance potentiallyincreasing an athlete’s stress, anxiety, and perceived pressure,resulting in further sacrifice of sleep duration and quality.\n",
+       "Athletes also may be at increased risk for certain medical\n",
+       "conditions associated with impaired sleep. Although it isestimated to affect only 4% of the general population,\n",
+       "sleep-disordered breathing has been estimated to be present\n",
+       "in 14% of professional football players (15). Given thedetrimental effects that sleep-disordered breathing and ob-\n",
+       "structive sleep apnea can have on both health and athletic\n",
+       "performance, a high index of suspicion should exist, par-ticularly among athletes with increased body mass and large\n",
+       "neck circumference. Restless legs syndrome is increasingly\n",
+       "recognized as an important cause of poor sleep, perhapsmore so in athletes than previously suspected. Althoughmoderate exercise is recommended for individuals with\n",
+       "restless legs syndrome, a single survey of 61 marathon run-\n",
+       "ners found that 13% met the criteria for restless legs syn-drome, ...<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** ab232164-15e2-4697-abc3-d808367b6425<br>**Similarity:** 0.863163097651014<br>**Text:** Ergonomics . 1985; 28:591 Y601.\n",
+       "47. Taylor L, Chrismas BC, Dascombe B, et al. The importance of monitoring\n",
+       "sleep within adolescent athletes: athletic, academic, and health consider-\n",
+       "ations. Front. Physiol . 2016; 7:101.\n",
+       "48. Taylor L, Chrismas BC, Dascombe B, et al. Sleep medication and athletic\n",
+       "performance-the evidence for practitioners and future research directions.Front. Physiol . 2016; 7:83.\n",
+       "49. Temesi J, Arnal PJ, Davranche K, et al. Does central fatigue explain reduced\n",
+       "cycling after complete sleep deprivation? Med. Sci. Sports Exerc . 2013;\n",
+       "45:2243 Y53.\n",
+       "50. Van Dongen HP, Maislin G, Mullington JM, Dinges DF. The cumulative cost\n",
+       "of additional wakefulness: dose-response effects on neurobehavioral func-\n",
+       "tions and sleep physiology from chronic sleep restriction and total sleep\n",
+       "deprivation. Sleep . 2003; 26:117 Y26.\n",
+       "51. Venter RE. Role of sleep in performance and recovery of athletes: a review\n",
+       "article. S. Afr. J. Res. Sport Ph . 2012; 34:167 Y84.\n",
+       "52. von Rosen P, Frohm A, Kottorp A, et al. Multiple factors explain injury risk\n",
+       "in adolescent elite athletes: applying a biopsychosocial perspective. Scand. J.\n",
+       "Med. Sci. Sports . 2017.\n",
+       "53. Waterhouse J, Reilly T, Edwards B. The stress of travel. J. Sports Sci . 2004;\n",
+       "22:946 Y65; discussion 65 Y6.\n",
+       "54. Watson A, Brickson S, Brooks A, Dunn W. Subjective well-being and training\n",
+       "load predict in-season injury and illness risk in female youth soccer players.\n",
+       "Br. J. Sports Med . 2016.\n",
+       "418 Volume 16 &Number 6 &November/December 2017 Slee...<br>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "**Node ID:** 8ee1ecd1-3817-46cf-a0ad-3c673b01fa83<br>**Similarity:** 0.8610143068688171<br>**Text:** Sleep and Athletic Performance\n",
+       "Andrew M. Watson , MD, MS\n",
+       "Abstract\n",
+       "Sleep is an essential component of health and well-being, with signifi-\n",
+       "cant impacts on physical development, emotional regulation, cognitive\n",
+       "performance, and quality of life. Along with being an integral part of therecovery and adaptive process between bouts of exercise, accumulating\n",
+       "evidence suggests that increased sleep duration and improved sleep\n",
+       "quality in athletes are associated with improved performance and com-petitive success. In addition, better sleep may reduce the risk of both\n",
+       "injury and illness in athletes, not only optimizing health but also potentially\n",
+       "enhancing performance through increased participation in training. Despitethis, most studies have found that athletes fail to obtain the recommended\n",
+       "amount of sleep, threatening both performance and health. Athletes face a\n",
+       "number of obstacles that can reduce the likelihood of obtaining propersleep, such as training and competition schedules, travel, stress, academicdemands, and overtraining. In addition, athletes have been found to dem-\n",
+       "onstrate poor self-assessment of their sleep duration and quality. In light of\n",
+       "this, athletes may require more careful monitoring and intervention toidentify individuals at risk and promote proper sleep to improve both per-\n",
+       "formance and overall health. This review attempts to highlight the recent\n",
+       "literature regarding sleep issues in athletes, the effects of sleep on athleticperformance, and interventions to enhan...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -133,14 +214,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Social media has both positive and negative effects on society. On the positive side, it can be used for advertising, promoting businesses to a large audience, and increasing profits. It can also be used for noble causes, such as contributing to needy people, and building communities by connecting people of different religions and beliefs. It provides a platform for bloggers, article writers, and content creators to connect with their audience and share their work. It also allows students and professionals to share and exchange information with like-minded individuals.\n",
-      "\n",
-      "On the negative side, social media can lead to cyber harassment, with many young people becoming victims of cyberbullying. Personal information and security can be hacked and shared on the internet. It can also lead to addiction, wasting time that could have been used for productive tasks. There are also cases of fraud and scams committed through social media. Furthermore, it can easily ruin someone's reputation by spreading false stories. It can also lead to the sharing of too much personal information, posing risks to users.\n"
+      "Sleep is an essential component of health and well-being for athletes. It is an integral part of the recovery and adaptive process between bouts of exercise. Increased sleep duration and improved sleep quality in athletes are associated with improved performance and competitive success. Better sleep may also reduce the risk of both injury and illness in athletes, not only optimizing health but also potentially enhancing performance through increased participation in training.\n"
      ]
     }
    ],
    "source": [
-    "base_retriever = index.as_retriever(similarity_top_k=2)\n",
+    "base_retriever = index.as_retriever(similarity_top_k=5)\n",
     "retrievals = base_retriever.retrieve(query)\n",
     "for n in retrievals:\n",
     "    display_source_node(n, source_length=1500)\n",
