--- a/tavily.ipynb
+++ b/tavily.ipynb
@@ -40,7 +40,7 @@
     "import shutil\n",
     "import os\n",
     "\n",
-    "tavily = TavilyClient(api_key=\"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\")\n",
+    "tavily = TavilyClient()\n",
     "\n",
     "response = tavily.search(query=user_query, \n",
     "                         search_depth=\"advanced\", \n",
@@ -202,7 +202,7 @@
    "outputs": [],
    "source": [
     "# HF_TOKEN: Optional[str] = os.getenv(\"HUGGING_FACE_TOKEN\")\n",
-    "gpt4 = OpenAI(model=\"gpt-4\", api_key=\"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\")\n",
+    "gpt4 = OpenAI(model=\"gpt-4\")\n",
     "query = user_query"
    ]
   },
