attempt at flask

--- a/tavily.ipynb
+++ b/tavily.ipynb
@@ -4,22 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "HTTPError",
-     "evalue": "422 Client Error: Unprocessable Entity for url: https://api.tavily.com/search",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 12\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m     10\u001b[0m tavily \u001b[38;5;241m=\u001b[39m TavilyClient(api_key\u001b[38;5;241m=\u001b[39mos\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTAVILY_API_KEY\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m---> 12\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mtavily\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msearch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43muser_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     13\u001b[0m \u001b[43m                         \u001b[49m\u001b[43msearch_depth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43madvanced\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m                         \u001b[49m\u001b[43minclude_raw_content\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m                         \u001b[49m\u001b[43mmax_results\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/tavily/tavily.py:48\u001b[0m, in \u001b[0;36mTavilyClient.search\u001b[0;34m(self, query, search_depth, **kwargs)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msearch\u001b[39m(\u001b[38;5;28mself\u001b[39m, query, search_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbasic\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m     45\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;124;03m    Combined search method. Set search_depth to either \"basic\" or \"advanced\".\u001b[39;00m\n\u001b[1;32m     47\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 48\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_search\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msearch_depth\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43msearch_depth\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/tavily/tavily.py:42\u001b[0m, in \u001b[0;36mTavilyClient._search\u001b[0;34m(self, query, search_depth, topic, days, max_results, include_domains, exclude_domains, include_answer, include_raw_content, include_images, use_cache)\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m---> 42\u001b[0m     \u001b[43mresponse\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/opt/homebrew/lib/python3.9/site-packages/requests/models.py:1021\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1016\u001b[0m     http_error_msg \u001b[38;5;241m=\u001b[39m (\n\u001b[1;32m   1017\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstatus_code\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m Server Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mreason\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m for url: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m   1018\u001b[0m     )\n\u001b[1;32m   1020\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[0;32m-> 1021\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: 422 Client Error: Unprocessable Entity for url: https://api.tavily.com/search"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Getting content from tavily APIs\n",
     "\n",
@@ -40,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +56,7 @@
     "    SimpleDirectoryReader,\n",
     ")\n",
     "from llama_index.llms.openai import OpenAI\n",
+    "from llama_index.embeddings.openai import OpenAIEmbedding\n",
     "from typing import List, Optional\n",
     "from llama_index.llms.huggingface import (\n",
     "    HuggingFaceInferenceAPI,\n",
@@ -89,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +116,8 @@
     "    original_text_metadata_key=\"original_text\",\n",
     ")\n",
     "text_splitter = SentenceSplitter()\n",
-    "embed_model = HuggingFaceEmbedding(\n",
-    "    model_name=\"sentence-transformers/all-mpnet-base-v2\", max_length=512\n",
-    ")\n",
+    "embed_model = OpenAIEmbedding()\n",
+    "\n",
     "Settings.embed_model = embed_model\n",
     "Settings.text_splitter = text_splitter\n",
     "\n",
@@ -145,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -153,20 +138,27 @@
      "output_type": "stream",
      "text": [
       "Window: \n",
-      "Therefore, it is important to examine factors that contribute to early academic success and that are amenable to change.\n",
-      " Researchers have reported that parent-child interactions, specifically stimulating and responsive parenting practices, are important influences on a child's academic development (Christian, Morrison, & Bryant, 1998; Committee on Early Childhood Pedagogy, 2000).  By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance.  While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003).  Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
-      " Models of Parent Involvement\n",
-      "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000).  The distinction between the activities parents partake in and the attitude parents have towards education was highlighted by several recent studies. \n",
+      "Future policy should focus on developing and promoting school programs that enable parents to increase a child's perception of cognitive competence, and fund future research to better understand the mechanisms by which this occurs.  School administrators should consider ways to improve the student-teacher relationship, given its important relation with the child's academic performance.  For instance, school administrators may set aside time in the curriculum for team building exercises between students, teachers, and parents.  Taken together, the present study identified mechanisms by which parent involvement is related to a child academic performance, over and above the impact of the child's IQ, and it is the hope that these findings lead to further research and new policies to increase a child's academic performance.\n",
+      " Acknowledgments\n",
+      "We thank the parents and children who have repeatedly given their time and effort to participate in this research.  Additionally, we are grateful to the entire RIGHT Track staff for their help in data collection, entry, and coding, particularly Louise Berdan, Kathryn Degnan, Elizabeth Shuey, Caitlin Stone, Paulo Graziano, Rachael Reavis, Robin Howse, and Jeffrey Gredlein.  This research was supported by a National Institute of Mental Health (NIMH) Behavioral Science Track Award for Rapid Transition (MH 55625), an NIMH FIRST Award (MH 55584) and an NIMH K-award (MH 74077) to Susan D. Calkins and by NIMH Grant (MH 58144A) awarded to Susan D. Calkins, Susan P. Keane, and Marion O'Brien.\n",
+      "\n",
       "Original Sentence: \n",
-      "While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). \n",
+      "Taken together, the present study identified mechanisms by which parent involvement is related to a child academic performance, over and above the impact of the child's IQ, and it is the hope that these findings lead to further research and new policies to increase a child's academic performance.\n",
+      "\n",
       "\n",
       "Window: \n",
-      "Examined as multiple mediators, perceived cognitive competence fully mediated the relation between parent involvement and the child's WIAT-II score, over and above the influence of the quality of the student-teacher relationship.  It may be the case that the variance of the relation between parent involvement and WIAT-II score is already explained by the child's perception of cognitive competence.  In addition, the student-teacher relationship was a full mediator of the relation between parent involvement and teacher ratings of the child's classroom academic performance.  This is one of the first studies to examine a mechanism by which parent involvement is related to a child's academic performance.  Two statistical techniques to test for mediation were used, further confirming the findings.\n",
-      " Although this study had many strengths, results of the present study are tempered by a consideration of several methodological limitations.  One limitation was that cross-sectional data were used. \n",
+      "As shown in Table 3, parent involvement was no longer a significant predictor of a child's classroom academic performance when the student-teacher relationship was accounted for in the analyses (β = .07, p = .36).  The Sobel test further confirmed the effect of the mediator (Test statistic = 1.90, p = .05).\n",
+      " Table 3\n",
+      "Regression Analyses Testing Perceived Cognitive Competence and the Student-Teacher Relationship as Multiple Mediators of the Relation Between Parent Involvement and Child's Academic Performance\n",
+      "*p<.05\n",
+      "**p< .01\n",
+      "Discussion\n",
+      "The purpose of the present study was to examine the ability of the child's perceived cognitive competence and the quality of the student-teacher relationship to explain the relation between parent involvement and the child's academic performance.  Findings from the present study demonstrated that increased parent involvement, defined as the teacher's perception of the positive attitude parents have toward their child's education, teacher, and school, was significantly related to increased academic performance, measured by both a standardized achievement test and teacher ratings of the child's classroom academic performance.  Further, parent involvement was significantly related to academic performance above and beyond the impact of the child's intelligence (IQ), a variable not accounted for in previous research.\n",
+      " Findings from the present study demonstrated that increased parent involvement is significantly related to a child's increased perception of cognitive competence.  This finding is consistent with previous studies (Gonzalez-DeHass, Willems, & Holbein, 2005; Grolnick, Ryan, & Deci, 1991). \n",
       "Original Sentence: \n",
-      "This is one of the first studies to examine a mechanism by which parent involvement is related to a child's academic performance. \n",
+      "Findings from the present study demonstrated that increased parent involvement, defined as the teacher's perception of the positive attitude parents have toward their child's education, teacher, and school, was significantly related to increased academic performance, measured by both a standardized achievement test and teacher ratings of the child's classroom academic performance. \n",
       "\n",
-      "Parental involvement has been found to be related to increased academic performance. This involvement can be defined and measured in various ways, including the activities that parents engage in at home and at school, as well as the positive attitudes parents have towards their child's education, school, and teacher. The specific mechanisms through which parental involvement influences a child's academic performance are not yet fully understood. However, one study found that perceived cognitive competence fully mediated the relation between parent involvement and the child's academic performance, over and above the influence of the quality of the student-teacher relationship. Additionally, the student-teacher relationship was a full mediator of the relation between parent involvement and teacher ratings of the child's classroom academic performance.\n"
+      "Parental involvement has been found to significantly impact a child's academic performance. This involvement, defined as the teacher's perception of the positive attitude parents have towards their child's education, teacher, and school, is significantly related to increased academic performance. This is measured by both a standardized achievement test and teacher ratings of the child's classroom academic performance. Additionally, parental involvement is significantly related to academic performance above and beyond the impact of the child's intelligence (IQ). Increased parental involvement is also significantly related to a child's increased perception of cognitive competence. However, it's important to note that parental involvement was no longer a significant predictor of a child's classroom academic performance when the student-teacher relationship was accounted for in the analyses.\n"
      ]
     }
    ],
