--- a/tavily.ipynb
+++ b/tavily.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +70,13 @@
     "from llama_index.core.embeddings import resolve_embed_model\n",
     "from llama_index.core.response.notebook_utils import display_source_node\n",
     "from llama_index.core.query_engine import RetrieverQueryEngine\n",
-    "from llama_index.core.postprocessor import MetadataReplacementPostProcessor"
+    "from llama_index.core.postprocessor import MetadataReplacementPostProcessor\n",
+    "from llama_index.core.chat_engine import CondenseQuestionChatEngine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,18 +88,20 @@
     "\n",
     "Settings.chunk_size = 256\n",
     "gpt4 = OpenAI(model=\"gpt-4\", api_key=os.environ['OPENAI_API_KEY'])\n",
-    "Settings.llm = gpt4\n",
+    "gpt = OpenAI(model=\"gpt-3.5-turbo\")\n",
+    "Settings.llm = gpt\n",
     "\n",
-    "# set the embed model\n",
+    "#set the embed model\n",
     "Settings.embed_model = HuggingFaceEmbedding(\n",
-    "    model_name=\"BAAI/bge-base-en-v1.5\"\n",
+    "    model_name=\"BAAI/bge-small-en-v1.5\"\n",
     ")\n",
-    "#https://huggingface.co/BAAI/bge-base-en-v1.5?library=sentence-transformers"
+    "#Settings.embed_model = OpenAIEmbedding()\n",
+    "#https://huggingface.co/BAAI/bge-small-en-v1.5?library=sentence-transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,15 +111,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 89d54cba-e706-4dd9-9342-d1e1e88be26f<br>**Similarity:** 0.7436160425426247<br>**Text:** While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
-       "Models of Parent Involvement\n",
-       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000). The distinction between the activities parents partake in and the attitude parents have towards education was highlighted by several recent studies. Several studies found that increased frequency of activities was associated with higher levels of child misbehavior in the classroom (Izzo, Weissberg, Kasprow, & Fendrich, 1999), whereas positive attitudes towards education and school were associated with the child's increased academic performance (Rimm-Kaufman, Pianta, Cox, & Bradley, 2003).<br>"
+       "**Node ID:** 32a680bc-0967-491f-9490-bcb857e66314<br>**Similarity:** 0.8837554768351307<br>**Text:** The Present Study\n",
+       "Parent involvement is one factor that has been consistently related to a child's increased academic performance (Hara & Burke, 1998; Hill & Craft, 2003; Marcon, 1999; Stevenson & Baker, 1987). While this relation between parent involvement and a child's academic performance is well established, studies have yet to examine how parent involvement increases a child's academic performance. The goal of the present study was to test two variables that may mediate, or explain how, parent involvement is related to a child's academic performance. Parent involvement was defined as the teacher's perception of “the positive attitude parents have towards their child's education, teacher, and school” (Webster-Stratton, 1998). Academic performance was measured by two methods: standardized achievement test scores and teacher report of academic performance through rating scales. Based on previous research (Gonzalez-DeHass et al., 2005; Hughes et al., 2005), two possible mechanisms, a child's perception of cognitive competence as measured by the child's report, and the student-teacher relationship as measured by the teacher's report, were examined for their ability to mediate the relation between parent involvement and academic performance. It was predicted that parent involvement would no longer be a significant predictor of a child's academic performance when the child's cognitive competence and the student-teacher relationship were accounted for in the analyses.\n",
+       "Method\n",
+       "...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -128,17 +132,12 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** f0f434a5-7e96-444e-934b-c43c07954eeb<br>**Similarity:** 0.7422621861921793<br>**Text:** Parent involvement and student academic performance: A multiple mediational analysis\n",
-       "David R. Topor\n",
-       "aThe Warren Alpert Medical School of Brown University/Bradley Hospital, 1011 Veterans Memorial Parkway, East Providence, RI 02915\n",
-       "Susan P. Keane\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Terri L. Shelton\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Susan D. Calkins\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Abstract\n",
-       "Parent involvement in a child's education is consistently found to be positively associated with a child's academic performance. However, there has been little investigation of the mechanisms that explain this association.<br>"
+       "**Node ID:** 37f1c271-cbbc-4ee8-9d98-7f5c4b8730e0<br>**Similarity:** 0.8793828117553203<br>**Text:** Here are five takeaways from the research.\n",
+       "1. Studies show more parental involvement leads to improved academic outcomes\n",
+       "When parents are involved in their children’s schooling, students show higher academic achievement, school engagement, and motivation, according to a 2019 American Psychological Association review of 448 independent studies on parent involvement.\n",
+       "A 2005 study from researchers at the Johns Hopkins University Center on School, Family and Community Partnerships, for example, showed that school practices encouraging families to support their child’s math learning at home led to higher percentages of students scoring at or above proficiency on standardized math tests.\n",
+       "And research shows that parent involvement with reading activities has a positive impact on reading achievement, language comprehension, and expressive language skills, as well as students’ interest in reading, attitudes toward reading, and level of attention in the classroom, according to a research summary by the National Literacy Trust.\n",
+       "“When parents become involved at school by, for example, attending events such as open houses or volunteering in the classroom, they build social networks that can provide useful information, connections to school personnel (e.g., teachers), or strategies for enhancing children’s achievement,” the APA research review said. “In turn, parents with heightened social capital are better equipped to support their children in succeeding in school as they are able to ...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -150,20 +149,9 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** efb36c28-10ef-469f-8a7d-99bca6585ea9<br>**Similarity:** 0.740986523480593<br>**Text:** Preview improvements coming to the PMC website in October 2024.\n",
-       "Learn More or\n",
-       "Try it out now.\n",
+       "**Node ID:** 7f79053f-df5e-46e6-a1da-df61d3c01f06<br>**Similarity:** 0.8761169484326965<br>**Text:** However, there has been little investigation of the mechanisms that explain this association. The present study examines two potential mechanisms of this association: the child's perception of cognitive competence and the quality of the student-teacher relationship. This study used a sample of 158 seven-year old participants, their mothers, and their teachers. Results indicated a statistically significant association between parent involvement and a child's academic performance, over and above the impact of the child's intelligence. A multiple mediation model indicated that the child's perception of cognitive competence fully mediated the relation between parent involvement and the child's performance on a standardized achievement test. The quality of the student-teacher relationship fully mediated the relation between parent involvement and teacher ratings of the child's classroom academic performance. Limitations, future research directions, and implications for public policy initiatives were discussed.\n",
        "Parent involvement and student academic performance: A multiple mediational analysis\n",
-       "David R. Topor\n",
-       "aThe Warren Alpert Medical School of Brown University/Bradley Hospital, 1011 Veterans Memorial Parkway, East Providence, RI 02915\n",
-       "Susan P. Keane\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Terri L. Shelton\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Susan D. Calkins\n",
-       "bThe University of North Carolina at Greensboro, Department of Psychology, P.O. Box 26170, Greensboro, NC 27402-6164\n",
-       "Abstract\n",
-       "Parent involvement in a child's education is consistently found to be positively associated with a child's academic performance.<br>"
+       "Parent involvement in a child's early education is consistently found to be positively associated with a child's academic performance (Hara & Burke, 1998; Hill & Craft, 2003; Marcon, 1999; Stevenson & Baker, 1987). Specifically, children whose parents are more involved in their education have higher levels of academic performance than children whose parents are involved to a lesser degree...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -175,9 +163,10 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** 146c6ee5-eb96-443d-9664-92073ab88322<br>**Similarity:** 0.7406279574503253<br>**Text:** By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance. While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
+       "**Node ID:** 8c07bea5-f093-433f-b023-e53b9cbcfb7a<br>**Similarity:** 0.8752678831050528<br>**Text:** Coupled with these findings of the importance of early academic success, a child's academic success has been found to be relatively stable after early elementary school (Entwisle & Hayduk, 1988; Pedersen, Faucher, & Eaton, 1978). Therefore, it is important to examine factors that contribute to early academic success and that are amenable to change.\n",
+       "Researchers have reported that parent-child interactions, specifically stimulating and responsive parenting practices, are important influences on a child's academic development (Christian, Morrison, & Bryant, 1998; Committee on Early Childhood Pedagogy, 2000). By examining specific parenting practices that are amenable to change, such as parent involvement, and the mechanisms by which these practices influence academic performance, programs may be developed to increase a child's academic performance. While parent involvement has been found to be related to increased academic performance, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood (Hill & Craft, 2003). Understanding these mechanisms would inform further research and policy initiatives and may lead to the development of more effective intervention programs designed to increase children's academic performance.\n",
        "Models of Parent Involvement\n",
-       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive attitudes parents have towards their child's education, school, and teacher (Epstein, 1996; Grolnick & Slowiaczek, 1994; Kohl, Lengua, & McMahon, 2000). The distinction between the activities parents partake in and the attitude parents have towards education was highlighted by several recent studies.<br>"
+       "Parent involvement has been defined and measured in multiple ways, including activities that parents engage in at home and at school and positive at...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -189,9 +178,16 @@
     {
      "data": {
       "text/markdown": [
-       "**Node ID:** cbefe78e-d048-42f9-a1d7-ac5edcb261c1<br>**Similarity:** 0.7399683468498713<br>**Text:** Specifically, a close student-teacher relationship is an important predictor of a child's academic performance (Birch & Ladd, 1997; Hamre & Pianta, 2001). Previous research has also found that parent involvement in a child's education positively influences the nature of the student-teacher relationship (Hill & Craft, 2003; Stevenson & Baker, 1987). Therefore, the student-teacher relationship was examined for its ability to explain the relation between parent involvement and a child's academic performance.\n",
-       "The Present Study\n",
-       "Parent involvement is one factor that has been consistently related to a child's increased academic performance (Hara & Burke, 1998; Hill & Craft, 2003; Marcon, 1999; Stevenson & Baker, 1987). While this relation between parent involvement and a child's academic performance is well established, studies have yet to examine how parent involvement increases a child's academic performance. The goal of the present study was to test two variables that may mediate, or explain how, parent involvement is related to a child's academic performance.<br>"
+       "**Node ID:** 9ba9c132-1540-4cdc-884e-7058f5eb00bd<br>**Similarity:** 0.8653597514634583<br>**Text:** Parent involvement changes social-emotional outcomes, too\n",
+       "The APA study showed that not only does parental involvement lead to improved academic outcomes, but it also has a positive impact on students’ social and emotional skills and decreases instances of delinquency.\n",
+       "That finding also applies internationally.\n",
+       "A 2014 International Education Studies report on parental involvement among 9th and 10th graders in Jordan showed that parental involvement had a positive impact on students’ emotional engagement in school. That means students with more involved parents are more likely to have fun, enjoy school, have high self-esteem, and perceive school as a satisfying experience.\n",
+       "And when parents visit their children’s school, that contributes to a sense of safety among the students, ultimately improving school engagement, the study said. Although conducted in Jordan, the study provides insight into how parental involvement affects students’ social-emotional development in other countries, including the United States.\n",
+       "Parent involvement also gives teachers the tools to better support their students, Borrello said.\n",
+       "“When teachers understand what their students are going through personally and at home and any challenges they may have, then that improves their teaching,” he said. “They’re able to support their student in ways they wouldn’t be able to otherwise.”\n",
+       "See Also\n",
+       "3. Not all parental involvement is created equal\n",
+       "Different levels and types of parent involvement led to varying o...<br>"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -213,22 +209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Parental involvement in a child's education has been consistently found to be positively associated with the child's academic performance. This involvement can be defined in multiple ways, including activities that parents engage in at home and at school, as well as the positive attitudes parents have towards their child's education, school, and teacher. Some studies have found that increased frequency of parental activities is associated with higher levels of child misbehavior in the classroom, while positive attitudes towards education and school are associated with increased academic performance. Furthermore, parent involvement can positively influence the nature of the student-teacher relationship, which is an important predictor of a child's academic performance. However, the specific mechanisms through which parent involvement exerts its influence on a child's academic performance are not yet fully understood."
+      "Parental involvement has been consistently linked to a child's increased academic performance. Studies have shown that when parents are actively engaged in their children's education by participating in school activities, volunteering, supporting learning at home, and maintaining positive attitudes towards education, students tend to exhibit higher academic achievement, school engagement, motivation, improved reading skills, language comprehension, and expressive language skills. Additionally, parental involvement has been associated with positive social and emotional outcomes for students, such as higher self-esteem, enjoyment of school, and decreased instances of delinquency. This involvement not only benefits the students directly but also equips teachers with a better understanding of their students' personal situations and challenges, enabling them to provide more effective support in the classroom.\n"
      ]
     }
    ],
    "source": [
     "query_engine = RetrieverQueryEngine.from_args(base_retriever, streaming=True) \n",
-    "response = query_engine.query(query)\n",
-    "for text in response.response_gen:\n",
-    "    response.print_response_stream()"
+    "chat_engine = CondenseQuestionChatEngine.from_defaults(query_engine=query_engine)\n",
+    "response = chat_engine.chat(query)\n",
+    "print(response)\n",
+    "# for text in response.response_gen:\n",
+    "#     response.print_response_stream()"
    ]
   },
   {
